--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2-1/int11-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2-1/int11-2-1.component.html
@@ -353,7 +353,7 @@
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
-            <button class="ui mini primary button" (click)="cancel()">
+            <button class="ui mini button" (click)="cancel()">
               <i class="remove icon"></i>
               ยกเลิก
             </button>
