--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -73,7 +73,14 @@
                                 สาขา </a>
                         </div>
                     </div>
-                    <a class="item " [routerLink]="[ '/int05/3'] " *ngIf="authService.renderByPage('int05/3')" routerLinkActive="active ">ตรวจสอบสินทรัพย์</a>
+                    <div class="ui dropdown item " routerLinkActive="active " *ngIf="authService.renderByPage('int05-S1')">
+                        <i class="dropdown icon "></i> ตรวจสอบสินทรัพย์
+                        <div class="menu ">
+                            <a class="item " [routerLink]="[ '/int05/3'] " *ngIf="authService.renderByPage('int05/3')" routerLinkActive="active ">ตรวจสอบสินทรัพย์แบบอัพโหลด</a>
+                            <a class="item " [routerLink]="[ '/int05/3/1'] " *ngIf="authService.renderByPage('int05/3/1')" routerLinkActive="active ">ตรวจสอบสินทรัพย์แบบเพิ่มข้อมูล</a>
+                            <a class="item " [routerLink]="[ '/int05/3/2'] " *ngIf="authService.renderByPage('int05/3/2')" routerLinkActive="active ">ตรวจสอบข้อมูลสินทรัพย์</a>
+                        </div>
+                    </div>
                     <a class="item " [routerLink]="[ '/int05/4'] " *ngIf="authService.renderByPage('int05/4')" routerLinkActive="active ">บันทึกผลการจัดซื้อจัดจ้าง</a>
                 </div>
             </div>
