--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
@@ -1,234 +1,74 @@
 <div class="ui grid">
   <div class="sixteen wide column">
 
-    <h2 class="ui header">อัพโหลดรายงานสินทรัพย์</h2>
-
-    <div class="ui top attached header">
-      <span>ตรวจสอบสินทรัพย์</span>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>ตรวจสอบสินทรัพย์แบบอัพโหลด</span>
     </div>
 
     <div class="ui attached segment">
-      <div class="ui form">
+      <form id="assetBalanceForm" class="ui form" ngNativeValidate>
         <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">รายงานสินทรัพย์ (GFMIS)</label>
-            <input type="file" />
+          <div class="four wide field"></div>
+          <div class="two wide field">
+            <label>รายงานสินทรัพย์ (GFMIS)</label>
+          </div>
+          <div class="five wide field">
+            <input id="file" type="file" name="file" accept=".xlsx" (change)="onChangeUpload($event)">
+          </div>
+          <div class="two wide field">
+            <a href="" style="text-decoration:  underline;">ตัวอย่างแบบฟอร์มนำเข้าระบบ</a>
+          </div>
+          <div class="three wide field"></div>
+        </div>
+
+        <div class="ui center aligned grid">
+          <div class="sixteen wide column">
+
+            <button class="ui mini primary button" (click)="onUpload($event)">
+              <i class="upload icon"></i>
+              อัพโหลด
+            </button>
+            <button class="ui mini button" (click)="clearFile()">
+              <i class="trash icon"></i>
+              ลบไฟล์
+            </button>
+            <!-- <button class="ui mini primary button" routerLink="/int05/3/1">
+              <i class="add icon"></i>
+              เพิ่มข้อมูล
+            </button> -->
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">รายงานสินทรัพย์ (พื้นที่)</label>
-            <input type="file" />
-          </div>
-        </div>
-      </div>
+      </form>
 
+      <br>
+
+      <table id="dataTable" class="ui small celled table" style="width: 100%;">
+        <thead>
+          <tr>
+            <th style="text-align: center !important;">เลขที่สินทรัพย์</th>
+            <th style="text-align: center !important;">เลขที่ย่อย</th>
+            <th style="text-align: center !important;">วันที่โอนเป็นทุน</th>
+            <th style="text-align: center !important;">คำอธิบายของสินทรัพย์</th>
+            <th style="text-align: center !important;">มูลค่าการได้มา</th>
+            <th style="text-align: center !important;">ค่าเสื่อมราคาสะสม</th>
+            <th style="text-align: center !important;">มูลค่าตามบัญชี</th>
+          </tr>
+        </thead>
+      </table>
+
+      <br>
       <div class="ui center aligned grid">
-        <div class="eight wide column">
-          <a class="ui mini primary button" (click)="uploadFile()">
-            <i class="upload icon"></i>
-            อัพโหลด
-          </a>
-          <a class="ui mini button" (click)="clearFile()">
-            <i class="trash outline icon"></i>
-            ลบไฟล์
-          </a>
-          <a class="ui mini primary button" routerLink="/int05/3/1">
-            <i class="add icon"></i>
-            เพิ่มข้อมูล
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <br>
-
-    <div class="ui segment" *ngIf="showData">
-      <div class="ui right aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button">
-            <i class="save icon"></i>
-            บันทึก
+          <button class="ui mini primary button" (click)="processCheckData()">
+            <i class="check circle icon"></i>
+            เลือกตรวจสอบข้อมูล
           </button>
-          <div id="export" class="ui mini primary buttons">
-            <div class="ui mini button">ส่งออก</div>
-            <div class="ui floating dropdown icon button">
-              <i class="dropdown icon"></i>
-              <div class="menu">
-                <div class="item">
-                  <i class="file pdf outline icon"></i> PDF</div>
-                <div class="item">
-                  <i class="file excel outline icon"></i>Excel</div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
-      <br>
-      <div class="ui grid center aligned">
-        <div class="sixteen wide column">
-          รายงานยอดสินทรัพย์คงเหลือ
-          <br>หน่วยเบิกจ่าย 0300600233 สำนักงานสรรพสามิตพื้นที่สมุทรสาคร
-          <br> งบประมาณปี 2560
-        </div>
-      </div>
-      <br>
-      <div style="overflow-x: scroll">
-        <table class="ui small celled table" style="width: 190%">
-          <thead>
-            <tr style="text-align: center;">
-              <th rowspan="2">สินทรัพย์</th>
-              <th rowspan="2">เลขที่ย่อย</th>
-              <th rowspan="2">เลขที่ย่อย</th>
-              <th rowspan="2">วันที่โอนเป็นทุน</th>
-              <th rowspan="2">วันที่โอนเป็นทุน</th>
-              <th rowspan="2">คำอธิบายของสินทรัพย์</th>
-              <th rowspan="2">คำอธิบายของสินทรัพย์</th>
-              <th rowspan="2">มูลค่าการได้มา</th>
-              <th rowspan="2">มูลค่าการได้มา</th>
-              <th rowspan="2">ค่าเสื่อมราคาสะสม</th>
-              <th rowspan="2">ค่าเสื่อมราคาสะสม</th>
-              <th rowspan="2">มูลค่าตามบัญชี</th>
-              <th rowspan="2">มูลค่าตามบัญชี</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1001</td>
-              <td>1</td>
-              <td>1</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>เก้าอี้ผู้มาติดต่อ</td>
-              <td>เก้าอี้ผู้มาติดต่อ</td>
-              <td>100</td>
-              <td>100</td>
-              <td>-10</td>
-              <td>-10</td>
-              <td>11</td>
-              <td>11</td>
-            </tr>
-            <tr>
-              <td>1002</td>
-              <td>2</td>
-              <td>2</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>ชั้นวางเอกสารติดผนัง</td>
-              <td>ตู้เก็บเอกสาร</td>
-              <td>200</td>
-              <td>200</td>
-              <td>-20</td>
-              <td>-20</td>
-              <td>22</td>
-              <td>22</td>
-            </tr>
-            <tr>
-              <td>1003</td>
-              <td>3</td>
-              <td>3</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>เครื่องโทรสาร ยี่ห้อ PANASONIC</td>
-              <td>เครื่องโทรสาร ยี่ห้อ PANASONIC</td>
-              <td>300</td>
-              <td>300</td>
-              <td>-30</td>
-              <td>-30</td>
-              <td>33</td>
-              <td>33</td>
-            </tr>
-            <tr>
-              <td>1004</td>
-              <td>4</td>
-              <td>4</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>ชั้นติดผนังวางเอกสารจำนวน 1 ชุด</td>
-              <td>ชั้นติดผนังวางเอกสารจำนวน 1 ชุด</td>
-              <td>400</td>
-              <td>400</td>
-              <td>-40</td>
-              <td>-40</td>
-              <td>44</td>
-              <td>44</td>
-            </tr>
-            <tr>
-              <td>1005</td>
-              <td>5</td>
-              <td>5</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>500</td>
-              <td>500</td>
-              <td>-50</td>
-              <td>-50</td>
-              <td>55</td>
-              <td>55</td>
-            </tr>
-            <tr>
-              <td>1006</td>
-              <td>6</td>
-              <td>6</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>600</td>
-              <td>600</td>
-              <td>-60</td>
-              <td>-60</td>
-              <td>66</td>
-              <td>66</td>
-            </tr>
-            <tr>
-              <td>1007</td>
-              <td>7</td>
-              <td>7</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>700</td>
-              <td>700</td>
-              <td>-70</td>
-              <td>-70</td>
-              <td>77</td>
-              <td>77</td>
-            </tr>
-            <tr>
-              <td>1008</td>
-              <td>8</td>
-              <td>8</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>1000</td>
-              <td>800</td>
-              <td>-80</td>
-              <td>-80</td>
-              <td>88</td>
-              <td>88</td>
-            </tr>
-            <tr>
-              <td>1009</td>
-              <td>9</td>
-              <td>9</td>
-              <td>22/010/2560</td>
-              <td>22/010/2560</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>เครื่องปรับอากาศ ยี่ห้อแคเรียร์</td>
-              <td>900</td>
-              <td>900</td>
-              <td>-90</td>
-              <td>-90</td>
-              <td>99</td>
-              <td>99</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+
+    </div>
+  </div>
+  <br>
+
+</div>
