UpdateCode; EditTable; ExportInfFull;

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -57,7 +57,7 @@
                 <th style="text-align: center !important" class="four wide field ">ปัจจัยเสี่ยง</th>
                 <th style="text-align: center !important">ปีงบประมาณ</th>
                 <th style="text-align: center !important">วันที่สร้าง</th>
-                <th style="text-align: center !important">ผู้สร้าง</th>
+                <th style="text-align: center !important" >ผู้สร้าง</th>
                 <th style="text-align: center !important">Action</th>
               </tr>
             </thead>
@@ -175,7 +175,7 @@
         <div class="inline fields"></div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button" (click)="ExportWebService()">
+            <button class="ui mini primary button" (click)="ExportInfWebService()">
               <i class="print icon"></i>
               Export
             </button>
@@ -274,7 +274,7 @@
           <div class="inline fields"></div>
           <div class="ui center aligned grid">
             <div class="sixteen wide column">
-              <button class="ui mini primary button" (click)="ExportOtherDtl()">
+              <button class="ui mini primary button" (click)="ExportInfOtherDtl()">
                 <i class="print icon"></i>
                 Export
               </button>
