--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-3/int08-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-3/int08-2-3.component.html
@@ -70,7 +70,7 @@
               <i class="setting icon"></i>
               กำหนดเงื่อนไข RL
             </button>
-            <button class="ui mini primary button" >
+            <button class="ui mini primary button" (click)="ExportWebService()" >
               <i class="print icon"></i>
               Export
             </button>
