--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
@@ -40,7 +40,7 @@
               <button class="ui mini primary button" (click)="modalpercent()">
                 กำหนดค่า %
               </button>
-              <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+              <button class="ui mini primary button" (click)="ExportInfFull()">
                 <i class="print icon"></i>
                 Export
               </button>
