--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -22,16 +22,16 @@
                       </div>
                   </div>
                   
-                  <table id="dataTable" class="ui small celled table">
+                  <table id="dataTable" class="ui small celled table" style="width: 100%;">
                     <thead>
                       <tr>
-                        <th>ลำดับ</th>
-                        <th>ปัจจัยเสี่ยง</th>
-                        <th>ปีงบประมาณ</th>
-                        <th>วันที่สร้าง</th>
-                        <th>ผู้สร้าง</th>
-                        <th>สถานะการใช้งาน</th>
-                        <th>Action</th>
+                        <th style="text-align: center !important">ลำดับ</th>
+                        <th style="text-align: center !important" >ปัจจัยเสี่ยง</th>
+                        <th style="text-align: center !important">ปีงบประมาณ</th>
+                        <th style="text-align: center !important">วันที่สร้าง</th>
+                        <th style="text-align: center !important">ผู้สร้าง</th>
+                        <th style="text-align: center !important">สถานะการใช้งาน</th>
+                        <th style="text-align: center !important">Action</th>
                       </tr>
                     </thead>
                   </table>
