--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -47,7 +47,17 @@
           </div>
         </div>
         <br>
+        <div class="ui right aligned grid" *ngIf="riskFullYear">
+          <div class="right floated left aligned three wide column">
+              <button class="ui mini primary button" (click)="renderForm3()" >
+                <i class="table icon"></i>
+                รายละเอียดปัจจัยเสี่ยงรวมประจำปี
+              </button>
+          </div>
+      </div>
 
+
+      
           <table id="dataTable"  class="ui small celled table" style="width: 100%;">
             <thead>
               <tr>
@@ -287,6 +297,100 @@
           </div>
         </div>
       </div>
+
+    
+        <!-- *ngIf="openForm3" -->
+        <div class="sixteen wide column" *ngIf="openForm3">
+          <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+            <span>ประเมินความเสี่ยงระบบสารสนเทศฯ ของกรมสรรพสามิต</span>
+          </div>
+          <div class="ui attached segment">
+            <div class="ui form">
+    
+              <div class="ui center aligned grid">
+                <div class="sixteen wide column">
+                  <label>ปีงบประมาณ {{budgetYearFull}}</label> 
+                </div>
+              </div>
+    
+    
+              <div class="inline fields">
+                <label>ปัจจัยเสี่ยง : ระบบสารสนเทศฯ ของกรมสรรพสามิต</label>
+              </div>
+              <div class="inline fields">
+                <label>เงื่อนไขความเสี่ยง :</label>
+              </div>
+            </div>
+    
+    
+    
+            <div *ngFor="let con of condition; let i=index">
+    
+              <div class="ui form">
+                <div class="inline fields">
+                  <div class="two wide field "></div>
+                  <div class="two wide field ">
+                    <label>ระบบสารสนเทศฯ ของกรมสรรพสามิต</label>
+                  </div>
+                  <div class="one wide field ">
+                    <label>
+                      {{con.condition == '<>' ? 'ระหว่าง' : con.condition == '>' ? 'มากกว่า':'น้อยกว่า'}}
+                    </label>
+                  </div>
+                  <div class="one wide field ">
+                    <label>{{con.value1}}</label>
+                  </div>
+                  <div class="one wide field ">
+                    <label>ถึง</label>
+                  </div>
+                  <div class="one wide field ">
+                    <label>{{con.value2 == null ? '-' : con.value2 }}</label>
+                  </div>
+                  <div class="one wide field ">
+                    <label>ระดับความเสี่ยง</label>
+                  </div>
+                  <div class="one wide field ">
+                    <label>{{con.convertValue}}</label>
+                  </div>
+                  <div class="two wide field ">
+                    <label>คะแนนความเสี่ยง</label>
+                  </div>
+                  <div class="one wide field ">
+                    <label>{{con.valueRl}}</label>
+                  </div>
+                </div>
+              </div>
+    
+            </div>
+
+            <div class="inline fields">
+              <div style="overflow-x: scroll; white-space:nowrap;">
+              <table id="dataTableF3" class="ui small celled table" style="width: 100%;">
+                <thead id="trColumn" >
+                </thead>
+                <tbody id="tbody">
+                </tbody>
+              </table>
+              </div>
+            </div>
+            <br>
+            <div class="inline fields"></div>
+            <div class="ui center aligned grid">
+              <div class="sixteen wide column">
+                <button class="ui mini primary button">
+                  <i class="print icon" (click)="ExportInfFull()"></i>
+                  Export
+                </button>
+                <button class="ui mini button " (click)="clearDataForm3() ">
+                  <i class="arrow left icon"></i>
+                  กลับ
+                </button>
+    
+              </div>
+            </div>
+          </div>
+        </div>
+
 
   </div>
 </div>
