--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
@@ -16,14 +16,14 @@
           </div>
 
         </div>
-       
+        <div style="overflow-x: scroll; white-space:nowrap;">
         <table id="dataTable" class="ui small celled table">
           <thead id="trColumn" >
           </thead>
           <tbody id="tbody">
           </tbody>
         </table>
-        
+        </div>
         <div class="inline fields"></div>
         <div class="inline fields ">
           <div class="sixteen wide field " >
