--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -48,7 +48,7 @@
                         <i class="setting icon"></i>
                         กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
                       </button>
-                      <button class="ui mini primary button" (click)="cancelFlow()">
+                      <button class="ui mini  button" (click)="cancelFlow()">
                           ยกเลิก
                       </button>
                     </div>
