--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -47,14 +47,7 @@
           </div>
         </div>
         <br>
-        <div class="ui right aligned grid" *ngIf="riskFullYear">
-          <div class="right floated left aligned three wide column">
-              <button class="ui mini primary button" (click)="renderForm3()" >
-                <i class="table icon"></i>
-                รายละเอียดปัจจัยเสี่ยงรวมประจำปี
-              </button>
-          </div>
-      </div>
+
 
 
       
@@ -73,16 +66,18 @@
             </thead>
           </table>
 
-        <!-- <div class="inline fields"></div>
-        <div class="inline fields ">
-          <div class="sixteen wide field ">
-            <div class="eight wide field "></div>
-            <button class="ui mini primary button" >
-              <i class="trash alternate icon"></i>
-              ลบ
-            </button>
+
+          <div class="ui five column centered grid" *ngIf="riskFullYear">
+            <div class="column">
+              <button class="ui mini primary button" (click)="renderForm3()" >
+                <i class="table icon"></i>
+                รายละเอียดปัจจัยเสี่ยงรวมประจำปี
+              </button>
+            </div>
           </div>
-        </div> -->
+
+       <!-- <div class="inline fields"></div> -->
+
       </div>
     </div>
 
