--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
@@ -143,7 +143,7 @@
               <i class="print icon"></i>
               Export
             </button>
-            <button class="ui mini primary button" (click)="cancelFlow()">
+            <button class="ui mini button" (click)="cancelFlow()">
               ยกเลิก
             </button>
           </div>
