--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -54,14 +54,13 @@
       <table id="dataTable" class="ui small celled table">
         <thead>
           <tr>
-            <th></th>
+
             <th>ที่</th>
             <th>ชื่อกระดาษทำการ</th>
             <th>ปัจจัยเสี่ยง</th>
             <th>ปีงบประมาณ</th>
             <th>วันที่สร้าง</th>
             <th>ผู้สร้าง</th>
-            <th>สถานะการใช้งาน</th>
             <th>Action</th>
           </tr>
         </thead>
@@ -146,7 +145,7 @@
 
               </tr>
               <tr>
-                <th style="text-align: center !important">RL</th>
+                <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
                 <th style="text-align: center !important">แปลค่า</th>
               </tr>
 
